--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,24 +1,18 @@
-body {
-  background-color: #fbc547;
-  color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
-  padding: 18vh 1rem;
-  text-align: center;
+html, body {
+    height: 100%;
 }
 
-a {
-  color: rgba(#000, 0.7);
+.container-fluid {
+  min-height: 100%;
+  height: 100%;
+}
 
-  &:focus,
-  &:hover {
-    color: rgba(#000, 0.6);
+.preview-container {
+  margin: 0 auto;
+  height: 85%;
+
+  #preview {
+    width: 100%;
+    height: 100%;
   }
-}
-
-.middleman-logo {
-  margin-bottom: 1rem;
-  width: 10rem;
 }
