Using rear camera and mirror false
working

--- a/source/sample1.html.erb
+++ b/source/sample1.html.erb
@@ -3,19 +3,20 @@
 <div class="preview-container border border-primary">
   <video id="preview" class="img-fluid"></video>
 </div>
-<div>
+<div class="alert alert-dismissible alert-info display-data">
   Date : <span id="qrcode-data">No Data Detected</span>
+  <span class="float-right"><%= link_to 'Index', '/index.html' %></span>
 </div>
 
 <script type="text/javascript">
-  scanner = new Instascan.Scanner({video: document.getElementById('preview')});
+  scanner = new Instascan.Scanner({video: document.getElementById('preview'), mirror: false});
   scanner.addListener('scan', function (content) {
     console.log(content);
     document.getElementById('qrcode-data').innerHTML = content;
   });
   Instascan.Camera.getCameras().then(function (cameras) {
     if (cameras.length > 0) {
-      scanner.start(cameras[0]);
+      scanner.start(cameras[1]);
     } else {
       console.error('No cameras found.');
       document.getElementById('qrcode-data').innerHTML = 'No cameras found.'
