--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -9,10 +9,14 @@ html, body {
 
 .preview-container {
   margin: 0 auto;
-  height: 85%;
+  height: 90%;
 
   #preview {
     width: 100%;
     height: 100%;
   }
+}
+
+.display-data {
+  border-radius: 0;
 }
