EOD code commit

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,5 +8,9 @@ title: QR Code with AR
     <td>Working
       with <%= link_to 'https://github.com/schmich/instascan', 'https://github.com/schmich/instascan', target: :_blank %></td>
   </tr>
+  <tr>
+    <td><%= link_to 'Sample 2', '/sample2.html' %></td>
+    <td>Working with Three.JS <%= link_to 'https://threejs.org', 'https://threejs.org/docs/index.html#manual/introduction/Creating-a-scene', target: :_blank %></td>
+  </tr>
   </tbody>
 </table>
