--- a/source/sample2.html.erb
+++ b/source/sample2.html.erb
@@ -1,23 +1,34 @@
-<style>
-  body {
-    margin: 0;
-  }
+---
+title: threejs.org creating-a-scene
+---
 
-  canvas {
-    width: 100%;
-    height: 100%
+<style>
+  .three-scene-card {
+    margin: 20px 0;
+    min-height: 500px;
+    height: 100%;
   }
 </style>
+<div class="card border-primary three-scene-card">
+  <div class="card-header">threejs.org creating-a-scene</div>
+  <div class="card-body" id="three-scene">
+
+  </div>
+</div>
 <script src="javascripts/three.js"></script>
-<script>
+<script type="text/javascript">
+  sceneWidth = $('#three-scene').width();
+  sceneHeight = $('#three-scene').height();
+
   var scene = new THREE.Scene();
-  var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-
+  var camera = new THREE.PerspectiveCamera(75, sceneWidth / sceneHeight, 1, 1000);
   var renderer = new THREE.WebGLRenderer();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.body.appendChild(renderer.domElement);
 
-  var geometry = new THREE.BoxGeometry(1, 1, 1);
+  renderer.setSize(sceneWidth, sceneHeight);
+
+  $('#three-scene').html(renderer.domElement);
+
+  var geometry = new THREE.BoxGeometry(2, 2, 2);
   var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
   var cube = new THREE.Mesh(geometry, material);
   scene.add(cube);
