Added readme and images

--- a/source/layouts/scene.erb
+++ b/source/layouts/scene.erb
@@ -6,7 +6,7 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Use the title from a page's frontmatter if it has one -->
-  <title><%= current_page.data.title || 'Sample Project for QR Code with AR' %></title>
+  <title><%= current_page.data.title || 'Sample Scene for QR Code with AR' %></title>
   <%= stylesheet_link_tag 'bootstrap' %>
   <%= stylesheet_link_tag 'site' %>
   <%= javascript_include_tag 'jquery-3.3.1' %>
