--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,5 +12,9 @@ title: QR Code with AR
     <td><%= link_to 'Sample 2', '/sample2.html' %></td>
     <td>Working with Three.JS <%= link_to 'https://threejs.org', 'https://threejs.org/docs/index.html#manual/introduction/Creating-a-scene', target: :_blank %></td>
   </tr>
+  <tr>
+    <td><%= link_to 'Sample 3', '/sample3.html' %></td>
+    <td> Working Demo</td>
+  </tr>
   </tbody>
 </table>
