EOD added sample 5 three.js + QR Code

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,11 +10,20 @@ title: QR Code with AR
   </tr>
   <tr>
     <td><%= link_to 'Sample 2', '/sample2.html' %></td>
-    <td>Working with Three.JS <%= link_to 'https://threejs.org', 'https://threejs.org/docs/index.html#manual/introduction/Creating-a-scene', target: :_blank %></td>
+    <td>Working with
+      Three.JS <%= link_to 'https://threejs.org', 'https://threejs.org/docs/index.html#manual/introduction/Creating-a-scene', target: :_blank %></td>
   </tr>
   <tr>
     <td><%= link_to 'Sample 3', '/sample3.html' %></td>
-    <td> Working Demo</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><%= link_to 'Sample 4', '/sample4.html' %></td>
+    <td>Working In Progress</td>
+  </tr>
+  <tr>
+    <td><%= link_to 'Sample 5', '/sample5.html' %></td>
+    <td>Three.js + QR Code</td>
   </tr>
   </tbody>
 </table>
