--- a/source/sample4.html.erb
+++ b/source/sample4.html.erb
@@ -1,52 +1,26 @@
 ---
 title: Sample4
 ---
-<style type="text/css">
-  .aframe-scene-card {
-    margin: 20px 0;
-    min-height: 500px;
-    height: 85%;
-  }
-</style>
 
-<div class="card border-primary aframe-scene-card">
-  <div class="card-header">Sample4</div>
-  <div class="card-body">
-    <video id="preview" class="img-fluid"></video>
-  </div>
-  <div class="card-footer text-muted">
-    Data : <span id="qrcode-data">No Data Detected</span>
-    <span class="float-right"><%= link_to 'Index', '/index.html' %></span>
-  </div>
+<div id="three-scene" class="border border-primary w-100 h-100">
+  <a-scene id="a-scene" arjs='debug: false; trackingMethod: best;debugUIEnabled: false;' cursor="rayOrigin: mouse" vr-mode-ui="enabled: false">
+    <a-entity id="my-entity">
+      <a-box position="0 0 0" rotation="0 45 0" material='opacity: 0.8;' color="red">
+
+      </a-box>
+    </a-entity>
+    <a-marker-camera preset='hiro'></a-marker-camera>
+  </a-scene>
 </div>
 
-<script src="javascripts/instascan.min.js"></script>
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+<script src="javascripts/aframe-ar.js"></script>
 
 <script type="text/javascript">
-  // using instanscan for qr code reader
-  scanner = new Instascan.Scanner({video: document.getElementById('preview'), mirror: false});
-  scanner.addListener('scan', function (content) {
-    console.log(content);
-    $('#qrcode-data').html(content);
-    if (content == 'blue') {
-
-    } else if (content == 'green') {
-
-    } else if (content == 'red') {
-
-    } else {
-
-    }
-  });
-  Instascan.Camera.getCameras().then(function (cameras) {
-    if (cameras.length > 0) {
-      scanner.start(cameras[1]);
-    } else {
-      $('#qrcode-data').html('No cameras found.');
-    }
-  }).catch(function (e) {
-    //console.error(e);
-    $('#qrcode-data').html(e.message);
-  });
+/*  var entityEl = document.getElementById('my-entity');
+  var boxEl = document.createElement('a-box');
+  boxEl.setAttribute('position', {x: 0, y: 0, z: 0});
+  boxEl.setAttribute('material', {opacity: 0.8});
+  boxEl.setAttribute('color', 'red');
+  entityEl.appendChild(boxEl);*/
 </script>
