EoD commit able view gltf
working progress in bg webcam

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -23,7 +23,11 @@ title: QR Code with AR
   </tr>
   <tr>
     <td><%= link_to 'Sample 5', '/sample5.html' %></td>
-    <td>Three.js + QR Code</td>
+    <td>Three.js + QR Code + working sample code</td>
+  </tr>
+  <tr>
+    <td><%= link_to 'Sample 6', '/sample6.html' %></td>
+    <td>Three.js + QR Code + Webcam as background</td>
   </tr>
   </tbody>
 </table>
