--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,6 +10,7 @@
   <%= stylesheet_link_tag 'bootstrap' %>
   <%= stylesheet_link_tag 'site' %>
   <%= javascript_include_tag 'jquery-3.3.1' %>
+  <%= javascript_include_tag 'underscore' %>
   <%= javascript_include_tag 'site' %>
 </head>
 <body>
