--- a/source/sample6.html.erb
+++ b/source/sample6.html.erb
@@ -47,8 +47,28 @@ title: threejs + QR Code + WebCam background
   ]);
   //scene.background = envMap;*/
 
-
   camera.position.z = 5;
+  var old_content = '';
+  scanner = new Instascan.Scanner({mirror: false});
+  scanner.addListener('scan', function (content) {
+    console.log(content);
+    document.getElementById('qrcode-data').innerHTML = content;
+    clearScene(scene);
+    /*  setTimeout(function () {
+      }, 5000);*/
+    objectLoader(content);
+  });
+  Instascan.Camera.getCameras().then(function (cameras) {
+    if (cameras.length > 0) {
+      scanner.start(cameras[1]);
+    } else {
+      console.error('No cameras found.');
+      document.getElementById('qrcode-data').innerHTML = 'No cameras found.'
+    }
+  }).catch(function (e) {
+    //console.error(e);
+    document.getElementById('qrcode-data').innerHTML = e.message
+  });
 
   var animate = function () {
     requestAnimationFrame(animate);
@@ -106,18 +126,20 @@ title: threejs + QR Code + WebCam background
           console.log('An error happened');
         }
       );
-    } else {
+    } else if (objs[qr_code_value]['type'] == 'object3D') {
       var geometry = new THREE.BoxGeometry(2, 2, 2);
       var material = new THREE.MeshBasicMaterial({color: qr_code_value});
       var cube = new THREE.Mesh(geometry, material);
       scene.add(cube);
+    } else {
+      alert('no data');
     }
 
     animate();
   }
 
   function clearScene(scene) {
-    var objsToRemove = _.rest(scene.children, 1);
+    var objsToRemove = _.rest(scene.children, 0);
     _.each(objsToRemove, function (object) {
       scene.remove(object);
     });
