sample 8 is working background webcam

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -29,5 +29,13 @@ title: QR Code with AR
     <td><%= link_to 'Sample 6', '/sample6.html' %></td>
     <td>Three.js + QR Code + Webcam as background</td>
   </tr>
+  <tr>
+    <td><%= link_to 'Sample 7', '/sample7.html' %></td>
+    <td>three.js + three.ar.js</td>
+  </tr>
+  <tr>
+    <td><%= link_to 'Three Js + Background Cam', '/sample8.html' %></td>
+    <td>three.js</td>
+  </tr>
   </tbody>
 </table>
