--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,7 @@
         content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Use the title from a page's frontmatter if it has one -->
   <title><%= current_page.data.title || 'Sample Project for QR Code with AR' %></title>
+  <link rel="shortcut icon" href="about:blank">
   <%= stylesheet_link_tag 'bootstrap' %>
   <%= stylesheet_link_tag 'site' %>
   <%= javascript_include_tag 'jquery-3.3.1' %>
