--- a/source/sample8.html.erb
+++ b/source/sample8.html.erb
@@ -19,7 +19,7 @@ title: threejs + webcam
 <script type="text/javascript">
 
   try {
-    sceneWidth = $('#three-scene').width() - 15;
+    sceneWidth = $('#three-scene').width();
     sceneHeight = $('#three-scene').height();
 
     var camVideo = document.getElementById('camvideo');
@@ -77,8 +77,8 @@ title: threejs + webcam
     var animate = function () {
       requestAnimationFrame(animate);
       renderer.clear();
-      cube.rotation.x += 0.001;
-      cube.rotation.y += 0.001;
+      cube.rotation.x += 0.01;
+      cube.rotation.y += 0.01;
       if (camVideo.readyState === camVideo.HAVE_ENOUGH_DATA) {
         videoImageContext.drawImage(camVideo, 0, 0);
         if (videoTexture)
@@ -98,6 +98,12 @@ title: threejs + webcam
       console.log(content);
       $('#qrcode-data').html(content);
       cube.material.color = new THREE.Color(content);
+    });
+    scanner.addListener('active', function () {
+      $('#qrcode-data').html('Active');
+    });
+    scanner.addListener('inactive', function () {
+      $('#qrcode-data').html('inActive');
     });
 
     Instascan.Camera.getCameras().then(function (cameras) {
