--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -34,8 +34,12 @@ title: QR Code with AR
     <td>three.js + three.ar.js</td>
   </tr>
   <tr>
-    <td><%= link_to 'Three Js + Background Cam', '/sample8.html' %></td>
-    <td>three.js</td>
+    <td>* <%= link_to 'Three Js + Background Cam', '/sample8.html', class: 'text-success' %></td>
+    <td>three.js + instascan</td>
+  </tr>
+  <tr>
+    <td><%= link_to 'ar js  + jsQR', '/sample9.html' %></td>
+    <td>three.js + <%= link_to 'jsQR', 'https://github.com/cozmo/jsQR', target: :_blank%></td>
   </tr>
   </tbody>
 </table>
