--- a/source/sample8.html.erb
+++ b/source/sample8.html.erb
@@ -1,5 +1,5 @@
 ---
-title: threejs + webcam
+title: threejs + instascan
 ---
 
 <div id="three-scene-card" class="card border-primary w-100 h-100">
