working with artoolkit

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,11 +15,11 @@ title: QR Code with AR
   </tr>
   <tr>
     <td><%= link_to 'Sample 3', '/sample3.html' %></td>
-    <td></td>
+    <td>AR.js + <%= link_to 'instascan', 'https://github.com/schmich/instascan', target: :_blank%></td>
   </tr>
   <tr>
     <td><%= link_to 'Sample 4', '/sample4.html' %></td>
-    <td>Working In Progress</td>
+    <td><%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank%></td>
   </tr>
   <tr>
     <td><%= link_to 'Sample 5', '/sample5.html' %></td>
@@ -39,7 +39,7 @@ title: QR Code with AR
   </tr>
   <tr>
     <td><%= link_to 'ar js  + jsQR', '/sample9.html' %></td>
-    <td>three.js + <%= link_to 'jsQR', 'https://github.com/cozmo/jsQR', target: :_blank%></td>
+    <td>AR.js + <%= link_to 'jsQR', 'https://github.com/cozmo/jsQR', target: :_blank%></td>
   </tr>
   </tbody>
 </table>
