--- a/source/sample9.html.erb
+++ b/source/sample9.html.erb
@@ -31,21 +31,21 @@ layout: false
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
 <script src="https://cozmo.github.io/jsQR/jsQR.js"></script>
 <script type="text/javascript">
-try {
-  var canvasElement = document.getElementById("mycanvas");
-  var canvasContext = canvasElement.getContext("2d");
-  canvasContext.drawImage($('video'), 0, 0, canvasElement.width, canvasElement.height);
-  var imageData = canvasContext.getImageData(0, 0, canvasElement.width, canvasElement.height);
-  var code = jsQR(imageData.data, imageData.width, imageData.height);
-  if(code) {
-    alert(code);
-  } else {
-    alert('No Code Data');
-  }
-  } catch (err) {
-    alert(err.message)
-  }
+  $(document).ready(function () {
+    try {
+      var arController = new ARController();
+      arController.addEventListener('getMarker', function (ev) {
 
+        alert("Detected marker with ids:", ev.data.marker.id, ev.data.marker.idPatt, ev.data.marker.idMatrix);
+        console.log("Marker data", ev.data.marker);
+        console.log("Marker transform matrix:", [].join.call(ev.data.matrix, ', '));
+      });
+
+    } catch (err) {
+      alert(err)
+    }
+
+  });
 </script>
 </body>
 </html>
