--- a/source/sample3.html.erb
+++ b/source/sample3.html.erb
@@ -1,29 +1,54 @@
 ---
-title: Sample03
+title: AR.js + jsQR
+layout: false
 ---
 
-<style>
-  .aframe-scene-card {
-    margin: 20px 0;
-    min-height: 500px;
-    height: 100%;
-  }
-</style>
-<div class="card border-primary aframe-scene-card" hidden>
-  <div class="card-header">Sample03</div>
-  <div class="card-body" id="aframe-scene">
-    <a-scene embedded arjs='debug: false; trackingMethod: best;' raycaster="far: 100; objects: [link];" cursor="rayOrigin: mouse">
-      <a-box position="-1 0.5 -3" rotation="0 45 0" material='opacity: 0.8;' color="#4CC3D9">
-        <a-animation attribute="rotation" to="90 180 90" dur="9000" repeat="indefinite" easing="linear"></a-animation>
-      </a-box>
-      <a-marker-camera preset='hiro'></a-marker-camera>
-    </a-scene>
-  </div>
-</div>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <!-- Use the title from a page's frontmatter if it has one -->
+  <title>AR.js + jsQR</title>
+  <link rel="shortcut icon" href="about:blank">
+  <link href="stylesheets/bootstrap.css" rel="stylesheet"/>
+  <link href="stylesheets/site.css" rel="stylesheet"/>
+  <script src="javascripts/jquery-3.3.1.js"></script>
+  <script src="javascripts/underscore.js"></script>
+  <script src="javascripts/site.js"></script>
+</head>
+<body style="margin : 0px; overflow: hidden; ">
 
-<!--<script src="javascripts/instascan.min.js"></script>-->
+<a-scene embedded arjs>
+  <a-box position="0 0 0" rotation="0 45 0" material='opacity: 0.8;' color="#4CC3D9">
+  </a-box>
+  <a-marker-camera preset='hiro'></a-marker-camera>
+</a-scene>
+
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-<script src="javascripts/aframe-ar.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
+<script src="javascripts/instascan.min.js"></script>
 <script type="text/javascript">
+  try {
 
+    scanner = new Instascan.Scanner({mirror: false});
+    scanner.addListener('scan', function (content) {
+      alert(content);
+    });
+
+    Instascan.Camera.getCameras().then(function (cameras) {
+      if (cameras.length > 0) {
+        scanner.start(cameras[0]);
+      } else {
+        alert('No cameras found.');
+      }
+    }).catch(function (err) {
+      alert(err);
+    });
+
+  } catch (err) {
+    alert(err);
+  }
 </script>
+</body>
+</html>
