--- a/source/sample4.html.erb
+++ b/source/sample4.html.erb
@@ -1,26 +1,103 @@
 ---
-title: Sample4
+title: jsartoolkit5
+layout: false
 ---
 
-<div id="three-scene" class="border border-primary w-100 h-100">
-  <a-scene id="a-scene" arjs='debug: false; trackingMethod: best;debugUIEnabled: false;' cursor="rayOrigin: mouse" vr-mode-ui="enabled: false">
-    <a-entity id="my-entity">
-      <a-box position="0 0 0" rotation="0 45 0" material='opacity: 0.8;' color="red">
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <!-- Use the title from a page's frontmatter if it has one -->
+  <title>jsartoolkit5</title>
+  <link rel="shortcut icon" href="about:blank">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      text-align: center;
+      overflow-x: hidden;
+    }
 
-      </a-box>
-    </a-entity>
-    <a-marker-camera preset='hiro'></a-marker-camera>
-  </a-scene>
-</div>
+    .portrait canvas {
+      transform-origin: 0 0;
+      transform: rotate(-90deg) translateX(-100%);
+    }
 
-<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-<script src="javascripts/aframe-ar.js"></script>
+    .desktop canvas {
+      transform: scale(-1, 1);
+    }
+  </style>
+</head>
+<body>
 
+<script src="javascripts/artoolkit.min.js"></script>
+<script src="javascripts/three.js"></script>
+<script src="javascripts/three.OrbitControls.js"></script>
+<script src="javascripts/artoolkit.three.js"></script>
 <script type="text/javascript">
-/*  var entityEl = document.getElementById('my-entity');
-  var boxEl = document.createElement('a-box');
-  boxEl.setAttribute('position', {x: 0, y: 0, z: 0});
-  boxEl.setAttribute('material', {opacity: 0.8});
-  boxEl.setAttribute('color', 'red');
-  entityEl.appendChild(boxEl);*/
+  window.ARThreeOnLoad = function () {
+    ARController.getUserMediaThreeScene({
+      maxARVideoSize: 320, cameraParam: 'images/camera_para-iPhone 5 rear 640x480 1.0m.dat',
+      onSuccess: function (arScene, arController, arCamera) {
+        document.body.className = arController.orientation;
+        var renderer = new THREE.WebGLRenderer({antialias: true});
+        if (arController.orientation === 'portrait') {
+          var w = (window.innerWidth / arController.videoHeight) * arController.videoWidth;
+          var h = window.innerWidth;
+          renderer.setSize(w, h);
+          renderer.domElement.style.paddingBottom = (w - h) + 'px';
+        } else {
+          if (/Android|mobile|iPad|iPhone/i.test(navigator.userAgent)) {
+            renderer.setSize(window.innerWidth, (window.innerWidth / arController.videoWidth) * arController.videoHeight);
+          } else {
+            renderer.setSize(arController.videoWidth, arController.videoHeight);
+            document.body.className += ' desktop';
+          }
+        }
+        document.body.insertBefore(renderer.domElement, document.body.firstChild);
+        var rotationV = 0;
+        var rotationTarget = 0;
+        renderer.domElement.addEventListener('click', function (ev) {
+          ev.preventDefault();
+          rotationTarget += 1;
+        }, false);
+        var sphere = new THREE.Mesh(
+          new THREE.SphereGeometry(0.5, 8, 8),
+          new THREE.MeshNormalMaterial()
+        );
+        sphere.material.shading = THREE.FlatShading;
+        sphere.position.z = 0.5;
+        var torus = new THREE.Mesh(
+          new THREE.TorusGeometry(0.3, 0.2, 8, 8),
+          new THREE.MeshNormalMaterial()
+        );
+        torus.material.shading = THREE.FlatShading;
+        torus.position.z = 0.5;
+        torus.rotation.x = Math.PI / 2;
+        arController.loadMarker('images/patt.hiro', function (markerId) {
+          var markerRoot = arController.createThreeMarker(markerId);
+          markerRoot.add(sphere);
+          arScene.scene.add(markerRoot);
+        });
+        var tick = function () {
+          arScene.process();
+          rotationV += (rotationTarget - sphere.rotation.z) * 0.05;
+          sphere.rotation.z += rotationV;
+          torus.rotation.y += rotationV;
+          rotationV *= 0.8;
+          arScene.renderOn(renderer);
+          requestAnimationFrame(tick);
+        };
+        tick();
+      }
+    });
+    delete window.ARThreeOnLoad;
+  };
+  if (window.ARController && ARController.getUserMediaThreeScene) {
+    ARThreeOnLoad();
+  }
 </script>
+</body>
+</html>
