Working samples with three js and jsartoolkit

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@ title: QR Code with AR
     <td>AR.js + <%= link_to 'instascan', 'https://github.com/schmich/instascan', target: :_blank%></td>
   </tr>
   <tr>
-    <td><%= link_to 'Sample 4', '/sample4.html' %></td>
+    <td>* <%= link_to 'Sample 4', '/sample4.html', class: 'text-success' %></td>
     <td><%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank%></td>
   </tr>
   <tr>
@@ -40,6 +40,10 @@ title: QR Code with AR
   <tr>
     <td><%= link_to 'ar js  + jsQR', '/sample9.html' %></td>
     <td>AR.js + <%= link_to 'jsQR', 'https://github.com/cozmo/jsQR', target: :_blank%></td>
+  </tr>
+  <tr>
+    <td>* <%= link_to 'jsartoolkit5', '/sample10.html', class: 'text-success' %></td>
+    <td>AR.js + <%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank%></td>
   </tr>
   </tbody>
 </table>
