EoD commit identify qr code positions

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -43,7 +43,11 @@ title: QR Code with AR
   </tr>
   <tr>
     <td>* <%= link_to 'jsartoolkit5', '/sample10.html', class: 'text-success' %></td>
-    <td>AR.js + <%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank%></td>
+    <td><%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank%> + three.js + instascan</td>
+  </tr>
+  <tr>
+    <td><%= link_to 'Identify QR Code position', '/sample11.html' %></td>
+    <td>three.js and jsQR</td>
   </tr>
   </tbody>
 </table>
