EoD using three js render

--- a/source/sample11.html.erb
+++ b/source/sample11.html.erb
@@ -3,9 +3,11 @@ title: Identify QR Code position
 ---
 
 <div id="three-scene-card" class="card border-primary w-100 h-100">
-  <div class="card-header">Identify QR Code position</div>
+  <div class="card-header clearfix">
+    Identify QR Code position
+  </div>
   <div class="card-body" id="three-scene">
-
+    <video id="camvideo" hidden></video>
   </div>
   <div class="card-footer">
     Data :
@@ -18,6 +20,7 @@ title: Identify QR Code position
 <script type="text/javascript">
   $(document).ready(function () {
     try {
+      $debug = $('#debug');
       sceneWidth = $('#three-scene').width();
       sceneHeight = $('#three-scene').height();
 
@@ -27,43 +30,32 @@ title: Identify QR Code position
       renderer.setClearAlpha(0.0);
       renderer.setPixelRatio(window.devicePixelRatio);
       renderer.setSize(sceneWidth, sceneHeight);
-      $('#three-scene').append(renderer.domElement);
-
-      var video = document.createElement("video");
-      var canvasElement = document.getElementById("canvas");
+      var canvasElement = renderer.domElement;
       var canvasContext = canvasElement.getContext("2d");
+      $('#three-scene').append(canvasElement);
 
+      var videoElement = document.getElementById("camvideo");
       navigator.mediaDevices.getUserMedia({
         video: {
           facingMode: 'environment',
           width: sceneHeight, height: sceneWidth
         }
       }).then(function (stream) {
-        video.srcObject = stream;
-        video.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
-        video.play();
-        //requestAnimationFrame(tick);
+        videoElement.srcObject = stream;
+        videoElement.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
+        videoElement.play();
       }).catch(function (err) {
         alert(err);
       });
 
-      function drawLine(begin, end, color) {
-        canvasContext.beginPath();
-        canvasContext.moveTo(begin.x, begin.y);
-        canvasContext.lineTo(end.x, end.y);
-        canvasContext.lineWidth = 4;
-        canvasContext.strokeStyle = color;
-        canvasContext.stroke();
-      }
-
       function tick() {
-        if (video.readyState === video.HAVE_ENOUGH_DATA) {
-          canvasElement.height = video.videoHeight;
-          canvasElement.width = video.videoWidth;
-          canvasContext.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
+        $debug.text('tick started');
+        if (videoElement.readyState === videoElement.HAVE_ENOUGH_DATA) {
+          $debug.text('inside videoElement');
+          canvasContext.drawImage(videoElement, 0, 0, canvasElement.width, canvasElement.height);
           var imageData = canvasContext.getImageData(0, 0, canvasElement.width, canvasElement.height);
-          var code = jsQR(imageData.data, imageData.width, imageData.height);
-          if (code) {
+          $('#qrcode-data').html(imageData);
+          if (false) {
             drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#13e4ff");
             drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#13e4ff");
             drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#13e4ff");
@@ -77,6 +69,7 @@ title: Identify QR Code position
       }
 
       tick();
+
     } catch (err) {
       alert(err.message)
     }
