--- a/source/sample11.html.erb
+++ b/source/sample11.html.erb
@@ -7,7 +7,7 @@ title: Identify QR Code position
     Identify QR Code position
   </div>
   <div class="card-body" id="three-scene">
-    <video id="camvideo" hidden></video>
+
   </div>
   <div class="card-footer">
     Data :
@@ -20,21 +20,45 @@ title: Identify QR Code position
 <script type="text/javascript">
   $(document).ready(function () {
     try {
-      $debug = $('#debug');
       sceneWidth = $('#three-scene').width();
       sceneHeight = $('#three-scene').height();
 
-      var scene = new THREE.Scene();
-      var camera = new THREE.PerspectiveCamera(75, sceneWidth / sceneHeight, 1, 1000);
-      var renderer = new THREE.WebGLRenderer({alpha: true});
+      // web gl canvas
+      renderer = new THREE.WebGLRenderer({alpha: true});
       renderer.setClearAlpha(0.0);
       renderer.setPixelRatio(window.devicePixelRatio);
       renderer.setSize(sceneWidth, sceneHeight);
-      var canvasElement = renderer.domElement;
-      var canvasContext = canvasElement.getContext("2d");
+      canvasElement = renderer.domElement;
       $('#three-scene').append(canvasElement);
 
-      var videoElement = document.getElementById("camvideo");
+      camera = new THREE.PerspectiveCamera(75, sceneWidth / sceneHeight, 1, 1000);
+      camera.position.set(0, 0, 5);
+      camera.lookAt(new THREE.Vector3(0, 0, 0));
+
+      controls = new THREE.OrbitControls(camera);
+      controls.update();
+
+      scene = new THREE.Scene();
+      geometry = new THREE.BoxGeometry(1, 1, 1);
+      material = new THREE.MeshBasicMaterial({
+        color: 'red',
+        opacity: 0.5,
+        transparent: true
+      });
+      cube = new THREE.Mesh(geometry, material);
+      scene.add(cube);
+
+      lineMaterial = new THREE.LineBasicMaterial({
+        color: 'green',
+        linewidth: 4
+      });
+
+      lineGeometry = new THREE.Geometry();
+      line = new THREE.Line(lineGeometry, lineMaterial);
+      scene.add(line);
+
+      //enable camera and stream video
+      videoElement = document.createElement("video");
       navigator.mediaDevices.getUserMedia({
         video: {
           facingMode: 'environment',
@@ -48,28 +72,53 @@ title: Identify QR Code position
         alert(err);
       });
 
+      //video canvas
+      videoCanvas = document.createElement('canvas');
+      videoCanvas.width = sceneWidth;
+      videoCanvas.height = sceneHeight;
+      videoCanvasContext = videoCanvas.getContext('2d');
+
+      videoTexture = new THREE.Texture(videoCanvas);
+      videoTexture.minFilter = THREE.LinearFilter;
+      videoTexture.magFilter = THREE.LinearFilter;
+      movieMaterial = new THREE.MeshBasicMaterial({map: videoTexture});
+      movieGeometry = new THREE.PlaneGeometry(2, 2, 0);
+      movieMesh = new THREE.Mesh(movieGeometry, movieMaterial);
+      movieMesh.material.depthTest = false;
+      movieMesh.material.depthWrite = false;
+      backgroundScene = new THREE.Scene();
+      backgroundCamera = new THREE.Camera();
+      //backgroundScene.add(backgroundCamera);
+      backgroundScene.add(movieMesh);
+
       function tick() {
-        $debug.text('tick started');
+        //renderer.clear();
         if (videoElement.readyState === videoElement.HAVE_ENOUGH_DATA) {
-          $debug.text('inside videoElement');
-          canvasContext.drawImage(videoElement, 0, 0, canvasElement.width, canvasElement.height);
-          var imageData = canvasContext.getImageData(0, 0, canvasElement.width, canvasElement.height);
-          $('#qrcode-data').html(imageData);
-          if (false) {
-            drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#13e4ff");
-            drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#13e4ff");
-            drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#13e4ff");
-            drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#13e4ff");
-            $('#qrcode-data').html(JSON.stringify(code, null));
+          videoCanvasContext.drawImage(videoElement, 0, 0, videoCanvas.width, videoCanvas.height);
+          videoTexture.needsUpdate = true;
+          var imageData = videoCanvasContext.getImageData(0, 0, canvasElement.width, canvasElement.height);
+          //console.log(imageData);
+          var code = jsQR(imageData.data, imageData.width, imageData.height);
+          //console.log(code);
+          if (code) {
+            cube.material.color = new THREE.Color(code.data);
+            var vertices = line.geometry.vertices;
+            vertices.push(new THREE.Vector2(code.location.topLeftCorner.x, code.location.topRightCorner.x));
+            vertices.push(new THREE.Vector2(code.location.topRightCorner.x, code.location.bottomRightCorner.x));
+            vertices.push(new THREE.Vector2(code.location.bottomRightCorner.x, code.location.bottomLeftCorner.x));
+            line.geometry.verticesNeedUpdate = true;
           } else {
-            $('#qrcode-data').html('no qr code');
+            $('#qrcode-data').text('No QR Code Found after tick');
           }
         }
+        renderer.autoClear = false;
+        controls.update();
+        renderer.render(backgroundScene, backgroundCamera);
+        renderer.render(scene, camera);
         requestAnimationFrame(tick);
       }
 
       tick();
-
     } catch (err) {
       alert(err.message)
     }
