--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -49,5 +49,9 @@ title: QR Code with AR
     <td><%= link_to 'Identify QR Code position', '/sample11.html' %></td>
     <td>three.js and jsQR</td>
   </tr>
+  <tr>
+    <td><%= link_to 'jsartoolkit5 with QR Code', '/sample12.html' %></td>
+    <td></td>
+  </tr>
   </tbody>
 </table>
